--- a/pokedex/app/assets/stylesheets/api/pokemon.scss
+++ b/pokedex/app/assets/stylesheets/api/pokemon.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the api/Pokemon controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.pokedex-list{
+  list-style: none;
+}
+
+.pokedex{
+  display:flex;
+}
